postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-manifest # Sets service name
  labels:
    app: postgres-manifest # Labels and Selectors
spec:
  type: ClusterIP # Sets service type
  ports:
    - port: 5432 # Sets port to run the postgres application
  selector:
    app: postgres-manifest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-manifest  # Sets Deployment name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres-manifest
  template:
    metadata:
      labels:
        app: postgres-manifest
    spec:
      containers:
        - name: postgres
          image: bitnami/postgresql:14.9.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432  # Exposes container port
          volumeMounts:
            - mountPath: /bitnami/postgresql
              name: postgredb
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgresql-manifest-data-claim
