service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dso-demo-java
spec:
  selector:
    app: dso-demo-java
  ports:
    - port: 8080
      targetPort: 8080
